# physics

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: clang-format.cmake  compiler-options.cmake  compiler-warnings.cmake  cpm.cmake  sanitizers.cmake
examples/fireworks/: CMakeLists.txt
examples/fireworks/src/: fireworks.cpp
include/physics/: base.h  body.h  body.hpp  broad-phase.hpp  collide-broad.h  contact.hpp  containers.h  core.hpp  force-generator.h  forcegenerator.h  gjk.hpp  intersect.hpp  particle-contacts.h  particle-force-generator.h  particle-links.h  particle-world.h  particle.h  particlecontacts.h  particleforcegenerator.h  particlelinks.h  particleworld.h  renderer.h  scene.hpp  shape.hpp  shapes-helpers.h  shapes-overlaps.h  shapes.h  world.h
include/physics/shapes/: box-shape.hpp  convex-shape.hpp  sphere-shape.hpp
samples/sample-sandbox/: sample-sandbox.cpp
samples/sample-spheres/: sample-spheres.cpp
samples/shared/: player-controller.cpp  player-controller.hpp  sample-app.cpp  sample-app.hpp
src/: CMakeLists.txt  body.cpp  box-shape.cpp  broad-phase.cpp  collide-broad.cpp  contact.cpp  convex-shape.cpp  core.cpp  force-generator.cpp  forcegenerator.cpp  gjk.cpp  intersect.cpp  particle-contacts.cpp  particle-force-generator.cpp  particle-links.cpp  particle-world.cpp  particle.cpp  particlecontacts.cpp  particleforcegenerator.cpp  particlelinks.cpp  particleworld.cpp  renderer.cpp  scene.cpp  shape.cpp  shapes-helpers.cpp  shapes-overlaps.cpp  shapes.cpp  sphere-shape.cpp  world.cpp
test/: catch2-helper.hpp  gjk-test.cpp  main.cpp
tests/: CMakeLists.txt  body-test.cpp  body_test.cpp  particle-contact-test.cpp  particle-links-test.cpp  particle-test.cpp  particle_test.cpp  particlecontact_test.cpp  particlelinks_test.cpp  shapes-helpers-test.cpp  shapes-overlaps-test.cpp  shapes-test.cpp  shapes_test.cpp
